--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
             "HackAssembler\\": "src/"
         }
     },
-    "require": {},
+    "require": {
+        "symfony/polyfill-php80": "^1.20"
+    },
     "require-dev": {
         "symfony/var-dumper": "^5.1"
     }
